--- a/Xamarin-Divisas/Xamarin_Divisas/App.xaml
+++ b/Xamarin-Divisas/Xamarin_Divisas/App.xaml
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:infra="clr-namespace:Xamarin_Divisas.Infrastructure;assembly=Xamarin_Divisas"
              x:Class="Xamarin_Divisas.App">
 	<Application.Resources>
 
-		<!-- Application resource dictionary -->
+        <ResourceDictionary>
+            <infra:InstanceLocator x:Key="Locator"></infra:InstanceLocator>
+        </ResourceDictionary>
 
 	</Application.Resources>
 </Application>
